Добваил сущность user и все соответствующие зависимости
